博文封面同事可以作为博文顶部背景

--- a/WebContent/static/i18n/blogs_zh.properties
+++ b/WebContent/static/i18n/blogs_zh.properties
@@ -4,7 +4,7 @@ language_zh=\u7B80\u4F53\u4E2D\u6587
 blogs_title=\u6D6E\u5C18\u8FFD\u68A6\u7684\u535A\u5BA2
 blogs_home=\u6211\u7684\u4E3B\u9875
 blogs_search_placehoder=\u641C\u7D22\u535A\u5BA2\u6807\u9898
-blogs_my_blogs=\u6211\u7684\u535A\u6587\u5217\u8868
+blogs_my_blogs=\u6211\u7684\u535A\u5BA2
 blogs_all_types=\u6240\u6709\u7C7B\u578B
 blogs_created_in=\u521B\u5EFA\u4E8E
 blogs_readers=\u4F4D\u8BFB\u8005
