summernote定制toolbar以及前端国际化

--- a/WebContent/static/i18n/blog_zh_CN.properties
+++ b/WebContent/static/i18n/blog_zh_CN.properties
@@ -1,5 +1,5 @@
-language_en=\u82F1\u8BED
-language_zh=\u7B80\u4F53\u4E2D\u6587
+language_en_US=\u82F1\u8BED
+language_zh_CN=\u7B80\u4F53\u4E2D\u6587
 
 blog_blogs=\u6211\u7684\u535A\u5BA2
 blog_created_in=\u521B\u5EFA\u4E8E
