--- a/WebContent/static/i18n/blogs.properties
+++ b/WebContent/static/i18n/blogs.properties
@@ -1,5 +1,5 @@
-language_en=English
-language_zh=Simplified Chinese
+language_en_US=English
+language_zh_CN=Simplified Chinese
 
 index_blogs=Blogs
 index_introduce=Hello,<br/>I'm Meng Li. <br/>A web/mobile application programmer.<br/>Based in Tsukuba, Ibaraki, Japan.<br/>
