--- a/WebContent/static/i18n/index_zh_CN.properties
+++ b/WebContent/static/i18n/index_zh_CN.properties
@@ -1,5 +1,5 @@
-language_en=\u82F1\u8BED
-language_zh=\u7B80\u4F53\u4E2D\u6587
+language_en_US=\u82F1\u8BED
+language_zh_CN=\u7B80\u4F53\u4E2D\u6587
 
 index_blogs=\u6211\u7684\u535A\u5BA2
 index_introduce=hi\uFF0C\u6211\u662F\u6D6E\u5C18\u8FFD\u68A6. <br/>\u4E00\u540D\u6765\u81EA\u4E2D\u56FD\u7684Web/iOS\u5F00\u53D1\u8005.<br/>\u73B0\u5C45\u65E5\u672C\u8328\u57CE\u53BF\u7B51\u6CE2\u5E02<br/>
