--- a/WebContent/static/i18n/blog.properties
+++ b/WebContent/static/i18n/blog.properties
@@ -1,5 +1,5 @@
-language_en=English
-language_zh=Simplified Chinese
+language_en_US=English
+language_zh_CN=Simplified Chinese
 
 blog_blogs=Blogs
 blog_created_in=Created in
