--- a/WebContent/static/i18n/blogs_zh_CN.properties
+++ b/WebContent/static/i18n/blogs_zh_CN.properties
@@ -1,5 +1,5 @@
-language_en=\u82F1\u8BED
-language_zh=\u7B80\u4F53\u4E2D\u6587
+language_en_US=\u82F1\u8BED
+language_zh_CN=\u7B80\u4F53\u4E2D\u6587
 
 blogs_title=\u6D6E\u5C18\u8FFD\u68A6\u7684\u535A\u5BA2
 blogs_home=\u6211\u7684\u4E3B\u9875
