下载文件；博文列表显示附件

--- a/WebContent/static/i18n/blog.properties
+++ b/WebContent/static/i18n/blog.properties
@@ -4,6 +4,8 @@ language_zh_CN=Simplified Chinese
 blog_blogs=Blogs
 blog_created_in=Created in
 blog_readers=readers
+blog_attachments=Attachments
+blog_attachment_upload_at=Uploaded at
 blog_visitor_comments=Visitor Comments
 blog_no_comments=There is no comment now.
 blog_write_comment=Write Comment
