--- a/WebContent/static/i18n/blog_zh_CN.properties
+++ b/WebContent/static/i18n/blog_zh_CN.properties
@@ -1,12 +1,14 @@
-language_en_US=\u82F1\u8BED
-language_zh_CN=\u7B80\u4F53\u4E2D\u6587
+language_en_US=英语
+language_zh_CN=简体中文
 
-blog_blogs=\u6211\u7684\u535A\u5BA2
-blog_created_in=\u521B\u5EFA\u4E8E
-blog_readers=\u4F4D\u8BFB\u8005
-blog_visitor_comments=\u8BBF\u5BA2\u8BC4\u8BBA
-blog_no_comments=\u6682\u65E0\u8BC4\u8BBA\u3002
-blog_write_comment=\u64B0\u5199\u8BC4\u8BBA
-blog_your_name=\u60A8\u7684\u59D3\u540D
-blog_comment_submit=\u63D0\u4EA4
-blog_back=\u8FD4\u56DE
+blog_blogs=我的博客
+blog_created_in=创建于
+blog_readers=位读者
+blog_attachments=附件
+blog_attachment_upload_at=上传于
+blog_visitor_comments=访客评论
+blog_no_comments=暂无评论
+blog_write_comment=撰写评论
+blog_your_name=您的姓名
+blog_comment_submit=提交
+blog_back=返回
