动态验证码验证用户下载

--- a/WebContent/static/i18n/blog.properties
+++ b/WebContent/static/i18n/blog.properties
@@ -6,9 +6,14 @@ blog_created_in=Created in
 blog_readers=readers
 blog_attachments=Attachments
 blog_attachment_upload_at=Uploaded at
+blog_attachment_size=file size 
 blog_visitor_comments=Visitor Comments
 blog_no_comments=There is no comment now.
 blog_write_comment=Write Comment
 blog_your_name=Your Name
 blog_comment_submit=Submit
 blog_back=Back
+blog_download_attachment_title=Download Attachment
+blog_download_attachment_validate=Please input validate code.
+blog_download_attachment_close=Close
+blog_download_attachment_submit=Download
