--- a/WebContent/static/i18n/blog_zh_CN.properties
+++ b/WebContent/static/i18n/blog_zh_CN.properties
@@ -12,3 +12,7 @@ blog_write_comment=撰写评论
 blog_your_name=您的姓名
 blog_comment_submit=提交
 blog_back=返回
+blog_download_attachment_title=下载附件
+blog_download_attachment_validate=请输入右侧验证码
+blog_download_attachment_close=关闭
+blog_download_attachment_submit=下载
