更新i18n关键词

--- a/WebContent/static/i18n/blog_zh_CN.properties
+++ b/WebContent/static/i18n/blog_zh_CN.properties
@@ -6,6 +6,7 @@ blog_created_in=创建于
 blog_readers=位读者
 blog_attachments=附件
 blog_attachment_upload_at=上传于
+blog_attachment_size=文件大小
 blog_visitor_comments=访客评论
 blog_no_comments=暂无评论
 blog_write_comment=撰写评论
