--- a/WebContent/static/i18n/blogs_zh_CN.properties
+++ b/WebContent/static/i18n/blogs_zh_CN.properties
@@ -1,10 +1,10 @@
-language_en_US=\u82F1\u8BED
-language_zh_CN=\u7B80\u4F53\u4E2D\u6587
+language_en_US=英语
+language_zh_CN=简体中文
 
-blogs_title=\u6D6E\u5C18\u8FFD\u68A6\u7684\u535A\u5BA2
-blogs_home=\u6211\u7684\u4E3B\u9875
-blogs_search_placehoder=\u641C\u7D22\u535A\u5BA2\u6807\u9898
-blogs_my_blogs=\u6211\u7684\u535A\u5BA2
-blogs_all_types=\u6240\u6709\u7C7B\u578B
-blogs_created_in=\u521B\u5EFA\u4E8E
-blogs_readers=\u4F4D\u8BFB\u8005
+blogs_title=浮尘追梦的博客
+blogs_home=我的主页
+blogs_search_placehoder=搜索博客标题
+blogs_my_blogs=我的博客
+blogs_all_types=所有类型
+blogs_created_in=创建于
+blogs_readers=位读者
