--- a/WebContent/static/i18n/index.properties
+++ b/WebContent/static/i18n/index.properties
@@ -1,8 +1,9 @@
 language_en_US=English
 language_zh_CN=Simplified Chinese
 
+index_title=Meng Li's Homepage
 index_blogs=Blogs
-index_introduce=Hello,<br/>I'm Meng Li. <br/>A web/mobile application programmer.<br/>Based in Tsukuba, Ibaraki, Japan.<br/>
+index_introduce=Hello,<br/>I'm Meng Li. <br/>A web/iOS application programmer.<br/>Based in Tsukuba, Ibaraki, Japan.<br/>
 index_contact_me=CONTACT ME
 index_my_blogs=MY BLOGS
 index_my_github=MY GITHUB
