--- a/WebContent/static/i18n/index_zh_CN.properties
+++ b/WebContent/static/i18n/index_zh_CN.properties
@@ -1,38 +1,18 @@
-language_en_US=\u82F1\u8BED
-language_zh_CN=\u7B80\u4F53\u4E2D\u6587
+language_en_US=英语
+language_zh_CN=简体中文
 
-index_blogs=\u6211\u7684\u535A\u5BA2
-index_introduce=hi\uFF0C\u6211\u662F\u6D6E\u5C18\u8FFD\u68A6. <br/>\u4E00\u540D\u6765\u81EA\u4E2D\u56FD\u7684Web/iOS\u5F00\u53D1\u8005.<br/>\u73B0\u5C45\u65E5\u672C\u8328\u57CE\u53BF\u7B51\u6CE2\u5E02<br/>
-index_contact_me=\u8054\u7CFB\u65B9\u5F0F
-index_my_blogs=\u6211\u7684\u535A\u5BA2
-index_my_github=\u6211\u7684GITHUB
-index_about=\u5173\u4E8E\u6211
-index_about_content_1=\u6765\u81EA\u6E56\u5317\u8346\u95E8\uFF0C\u6BD5\u4E1A\u4E8E\u4E1C\u5317\u6797\u4E1A\u5927\u5B66\u3002
-index_about_content_2=\u73B0\u5C31\u8BFB\u4E8E\u65E5\u672C\u7B51\u6CE2\u5927\u5B66\uFF0C\u653B\u8BFB\u7855\u58EB\u3002
-index_about_content_3=\u4E13\u6CE8\u4E8EWeb\u7AEF\u548C\u79FB\u52A8\u7AEF\u5F00\u53D1\uFF0C\u4E0B\u9762\u6709\u4E00\u4E9B\u6211\u548C\u6211\u7684\u56E2\u961F\u7684\u9879\u76EE.
-index_about_content_4=\u5E38\u7528Java\uFF0CJavaScript\u548CObjective-C\u7B49\u7F16\u7A0B\u8BED\u8A00\uFF0C\u4F7F\u7528Hibernate\uFF0CSpring\u7B49\u6846\u67B6\u5F00\u53D1Java Web\uFF0C\u5199\u8FC7\u4E00\u4E9BiOS App\u3002
-index_about_content_5=\u5728\u5B9E\u73B0\u4E1A\u52A1\u903B\u8F91\u529F\u80FD\u4E4B\u4E0A\uFF0C\u66F4\u52A0\u5173\u6CE8\u9875\u9762\u4EA4\u4E92\u548C\u8BBE\u8BA1\u3002
-index_motto=\u4E0D\u79EF\u8DEC\u6B65\uFF0C\u65E0\u4EE5\u81F3\u5343\u91CC
-index_contact=\u8054\u7CFB\u65B9\u5F0F
-index_address=<label>\u7B51\u6CE2\u5927\u5B66\u5927\u5B66\u9662\uFF0C\u8BA1\u7B97\u673A\u79D1\u5B66\u4E13\u653B\uFF0CSoftlab</label><label>\u65E5\u672C\uFF0C\u8328\u57CE\u53BF\uFF0C\u7B51\u6CE2\u5E02\uFF0C\u5929\u738B\u53F01-1-1</label><label>+81 07010623837</label><label>lm2343635@126.com</label><label>limeng@softlab.cs.tsukuba.ac.jp</label>
-
-
-blogs_title=\u6D6E\u5C18\u8FFD\u68A6\u7684\u535A\u5BA2
-blogs_home=\u6211\u7684\u4E3B\u9875
-blogs_search_placehoder=\u641C\u7D22\u535A\u5BA2\u6807\u9898
-blogs_my_blogs=\u6211\u7684\u535A\u6587\u5217\u8868
-blogs_all_types=\u6240\u6709\u7C7B\u578B
-blogs_created_in=\u521B\u5EFA\u4E8E
-blogs_readers=\u4F4D\u8BFB\u8005
-
-blog_blogs=\u6211\u7684\u535A\u5BA2
-blog_created_in=\u521B\u5EFA\u4E8E
-blog_readers=\u4F4D\u8BFB\u8005
-blog_visitor_comments=\u8BBF\u5BA2\u8BC4\u8BBA
-blog_no_comments=\u6682\u65E0\u8BC4\u8BBA\u3002
-blog_write_comment=\u64B0\u5199\u8BC4\u8BBA
-blog_write_comment_placeholder=\u8BF7\u5728\u6B64\u5904\u64B0\u5199\u8BC4\u8BBA\u3002
-blog_your_name=\u60A8\u7684\u59D3\u540D
-blog_comment_clear=\u60C5\u51B5
-blog_comment_submit=\u63D0\u4EA4
-blog_back=\u8FD4\u56DE
+index_title=浮尘追梦
+index_blogs=我的博客
+index_introduce=hi，我是浮尘追梦<br/>一名来自中国的Web/iOS开发者<br/>现居日本茨城县筑波市<br/>
+index_contact_me=联系方式
+index_my_blogs=我的博客
+index_my_github=我的GITHUB
+index_about=关于我
+index_about_content_1=来自湖北荆门，毕业于东北林业大学。
+index_about_content_2=现就读于日本筑波大学，攻读硕士。
+index_about_content_3=专注于Web端和移动端开发，下面有一些我和我的团队的项目.
+index_about_content_4=常用Java，JavaScript和Objective-C等编程语言，使用Hibernate，Spring等框架开发Java Web，写过一些iOS App。
+index_about_content_5=在实现业务逻辑功能之上，更加关注页面交互和设计。
+index_motto=不积跬步，无以至千里
+index_contact=联系方式
+index_address=<label>筑波大学大学院，计算机科学专攻，Softlab</label><label>日本，茨城县，筑波市，天王台1-1-1</label><label>+81 07010623837</label><label>lm2343635@126.com</label><label>limeng@softlab.cs.tsukuba.ac.jp</label>
