Programming Skill & Web Application.

--- a/WebContent/static/i18n/index.properties
+++ b/WebContent/static/i18n/index.properties
@@ -4,7 +4,7 @@ index_introduce=Hello,<br/>I'm Meng Li. <br/>A web/iOS application programmer.<b
 index_contact_me=CONTACT ME
 index_my_blogs=MY BLOGS
 index_my_github=MY GITHUB
-index_about=ABOUT<br/>MENG LI
+index_about=ABOUT ME
 index_about_content_1=Born in Jingmen, Hubei, China. Graduated from Northeast Forestry University in Harbin, China. 
 index_about_content_2=Now I am studying in University of Tsukuba in Tsukuba, Ibaraki, Japan.
 index_about_content_3=I am interested in web application and mobile application development. There are some projects of me, some of them are made by myself, and others are which I cooperated with my group.
