Translate productions for Chinese and English.

--- a/WebContent/static/i18n/index.properties
+++ b/WebContent/static/i18n/index.properties
@@ -1,6 +1,6 @@
 index_title=Meng Li's Homepage
 index_blogs=Blogs
-index_introduce=Hello,<br/>I'm Meng Li. <br/>A web/iOS application programmer.<br/>Based in Tsukuba, Ibaraki, Japan.<br/>
+index_introduce=Hello,<br/>I'm Meng Li. <br/>A Web/iOS application programmer.<br/>Based in Tsukuba, Ibaraki, Japan.<br/>
 index_contact_me=CONTACT ME
 index_my_blogs=MY BLOGS
 index_my_github=MY GITHUB
@@ -10,6 +10,40 @@ index_about_content_2=Now I am studying in University of Tsukuba in Tsukuba, Iba
 index_about_content_3=I am interested in web application and mobile application development. There are some projects of me, some of them are made by myself, and others are which I cooperated with my group.
 index_about_content_4=I am familiar with Objective-C and Java language. For Java, not only can I use Java SE but also some basic framework of Java EE like Hibernate, Spring, JNDI and so on. I can use Java language to develop web application and Android Application. Now I am learning Objective-C language for iOS Application development.
 index_about_content_5=In Web Application development, page design is also important, I also learned html, css and javascript. For javascript, I am familiar with jQuery framework. I can use the API in jQuery to develop the simple Ajax Application or the DWR framework to complete some complex Ajax Application.
-index_motto=A journey of a thousand miles begins with a single step. <br>This is important for a programmer.
+index_motto=Support everyone's life by information technology.
 index_contact=Ways to Contact Me
 index_address=<label>Softlab, Department of Computer Science, University of Tsukuba</label><label>Tennodai 1-1-1, Tsukuba, Ibaraki, Japan</label><label>+81 07010623837</label><label>lm2343635@126.com</label><label>limeng@softlab.cs.tsukuba.ac.jp</label>
+
+organization=Department of Computer Science, Graduate School of System and Information Engineering, University of Tsukuba
+research=Research on distributed system and building application with untrusted servers.
+education=Education Experience
+programming_skill=Programming Skill
+le4=Very skilled use. 
+le3=Use with out reference.
+le2=Use with reference.
+le1=Used in courses.
+web_application=Web Application
+blog=Blog
+blog_title=My Homepage, a Blog System
+blog_introdution_1=Add, modify and delete the classification of a blog.
+blog_introdution_2=Add, modify and delete a blog.
+blog_introdution_3=Add pictures or attachment file in a blog.
+blog_introdution_4=Search a blog by keyword of title.
+blog_introdution_5=Review and comment.
+easy_finance=Easy Finance
+easy_finance_title=Financial Management System for Individual User.
+easy_finance_introduction_1=Manage account book easily.
+easy_finance_introduction_2=Create a report with graph.
+easy_finance_introduction_3=Record any you want.
+easy_finance_introduction_4=Use your money wisely.
+ios_application=iOS Application
+rate=Rate Assistant
+rate_title=Exchange Rate Search and Subscription App
+rate_introduction_1=Monitor exchange rate between two currencies you care about.
+rate_introduction_2=Notify after reaching the threshold you set.
+rate_introduction_3=News about exchange rate.
+httper=Httper
+httper_title=REST API Test App
+httper_introduction_1=Test your REST API without PC.
+httper_introduction_2=Keyboard accessory.
+httper_introduction_3=Developing data synchronization between devices now.
