--- a/WebContent/static/i18n/index.properties
+++ b/WebContent/static/i18n/index.properties
@@ -1,4 +1,4 @@
-index_title=Meng Li's Homepage
+index_title=Homepage of Meng Li
 index_blogs=Blogs
 index_introduce=Hello,<br/>I'm Meng Li. <br/>A Web/iOS application programmer.<br/>Based in Tsukuba, Ibaraki, Japan.<br/>
 index_contact_me=CONTACT ME
@@ -10,7 +10,7 @@ index_about_content_2=Now I am studying in University of Tsukuba in Tsukuba, Iba
 index_about_content_3=I am interested in web application and mobile application development. There are some projects of me, some of them are made by myself, and others are which I cooperated with my group.
 index_about_content_4=I am familiar with Objective-C and Java language. For Java, not only can I use Java SE but also some basic framework of Java EE like Hibernate, Spring, JNDI and so on. I can use Java language to develop web application and Android Application. Now I am learning Objective-C language for iOS Application development.
 index_about_content_5=In Web Application development, page design is also important, I also learned html, css and javascript. For javascript, I am familiar with jQuery framework. I can use the API in jQuery to develop the simple Ajax Application or the DWR framework to complete some complex Ajax Application.
-index_motto=Support everyone's life by information technology.
+index_motto=Support life of everyone by information technology.
 index_contact=Ways to Contact Me
 index_address=<label>Softlab, Department of Computer Science, University of Tsukuba</label><label>Tennodai 1-1-1, Tsukuba, Ibaraki, Japan</label><label>+81 07010623837</label><label>lm2343635@126.com</label><label>limeng@softlab.cs.tsukuba.ac.jp</label>
 
