Translate introduction for Japanese.

--- a/WebContent/static/i18n/index_ja.properties
+++ b/WebContent/static/i18n/index_ja.properties
@@ -1,15 +1,15 @@
 index_title=Meng Liのホームページ
 index_blogs=ブログ
-index_introduce=こんにちは,<br/>Web/iOSのプログラマーMeng Liです。<br/>茨城県つくば市に住んでいます。<br/>
+index_introduce=こんにちは<br>WebとiOSアプリ開発者のMeng Li<br/>茨城県・つくば市・筑波大学大学院<br/>
 index_contact_me=連絡先
 index_my_blogs=ブログ
 index_my_github=GITHUB
 index_about=私に関する
-index_about_content_1=Born in Jingmen, Hubei, China. Graduated from Northeast Forestry University in Harbin, China. 
-index_about_content_2=Now I am studying in University of Tsukuba in Tsukuba, Ibaraki, Japan.
-index_about_content_3=I am interested in web application and mobile application development. There are some projects of me, some of them are made by myself, and others are which I cooperated with my group.
-index_about_content_4=I am familiar with Objective-C and Java language. For Java, not only can I use Java SE but also some basic framework of Java EE like Hibernate, Spring, JNDI and so on. I can use Java language to develop web application and Android Application. Now I am learning Objective-C language for iOS Application development.
-index_about_content_5=In Web Application development, page design is also important, I also learned html, css and javascript. For javascript, I am familiar with jQuery framework. I can use the API in jQuery to develop the simple Ajax Application or the DWR framework to complete some complex Ajax Application.
+index_about_content_1=中国、湖北省、荊門市生まれ；中国、ハルビン市の東北林業大学から卒業
+index_about_content_2=茨城県つくば市の筑波大学で博士前期課程を勉強中
+index_about_content_3=iOSアプリケーション開発とWebアプリケーション開発に注目
+index_about_content_4=Objective-CとJava言語を熟練に使える
+index_about_content_5=基本的な機能を実現だけではなく、アプリケーションのデーザン面をもっと注目
 index_motto=IT技術で人々の暮らしを支える
 index_contact=連絡先
 index_address=<label>筑波大学・コンピュータサイエンス専攻・ソフトウェア研究室</label><label>茨城県・つくば市・天王台 1-1-1</label><label>+81 07010623837</label><label>lm2343635@126.com</label><label>limeng@softlab.cs.tsukuba.ac.jp</label>
