--- a/WebContent/static/i18n/index_zh_CN.properties
+++ b/WebContent/static/i18n/index_zh_CN.properties
@@ -7,7 +7,7 @@ index_my_github=我的GITHUB
 index_about=关于我
 index_about_content_1=来自湖北荆门，毕业于东北林业大学。
 index_about_content_2=现就读于日本筑波大学，攻读硕士。
-index_about_content_3=专注于Web端和移动端开发，下面有一些我和我的团队的项目.
+index_about_content_3=专注于Web端和移动端开发，以下有一些我和我的团队的项目.
 index_about_content_4=常用Java，JavaScript和Objective-C等编程语言，使用Hibernate，Spring等框架开发Java Web，写过一些iOS App。
 index_about_content_5=在实现业务逻辑功能之上，更加关注页面交互和设计。
 index_motto=IT，改变生活
