--- a/WebContent/static/i18n/index.properties
+++ b/WebContent/static/i18n/index.properties
@@ -4,7 +4,7 @@ index_introduce=Hello,<br/>I'm Meng Li. <br/>A Web/iOS application developer.<br
 index_contact_me=CONTACT ME
 index_my_blogs=MY BLOGS
 index_my_github=MY GITHUB
-index_about=ABOUT ME
+index_about=About Me
 index_about_content_1=Born in Jingmen, Hubei, China. Graduated from Northeast Forestry University in Harbin, China. 
 index_about_content_2=Now I am studying in University of Tsukuba in Tsukuba, Ibaraki, Japan.
 index_about_content_3=I am interested in web application and mobile application development. There are some projects of me by myself and my group in this homepage.
@@ -31,7 +31,7 @@ blog_introdution_3=Add pictures or attachment file in a blog.
 blog_introdution_4=Search a blog by keyword of title.
 blog_introdution_5=Review and comment.
 easy_finance=Easy Finance
-easy_finance_title=Financial Management System for Individual User.
+easy_finance_title=Financial Application for Individual User.
 easy_finance_introduction_1=Manage account book easily.
 easy_finance_introduction_2=Create a report with graph.
 easy_finance_introduction_3=Record any you want.
