Update Japanese translation.

--- a/WebContent/static/i18n/index_ja.properties
+++ b/WebContent/static/i18n/index_ja.properties
@@ -4,7 +4,7 @@ index_introduce=こんにちは<br>WebとiOSアプリ開発者のMeng Li<br/>茨
 index_contact_me=連絡先
 index_my_blogs=ブログ
 index_my_github=GITHUB
-index_about=私に関する
+index_about=私について
 index_about_content_1=中国、湖北省、荊門市生まれ；中国、ハルビン市の東北林業大学から卒業
 index_about_content_2=茨城県つくば市の筑波大学で博士前期課程を勉強中
 index_about_content_3=iOSアプリケーション開発とWebアプリケーション開発に注目
