Update project information.

--- a/WebContent/static/i18n/index.properties
+++ b/WebContent/static/i18n/index.properties
@@ -25,11 +25,10 @@ le1=Used in courses.
 web_application=Web Application
 blog=Blog
 blog_title=My Homepage, a Blog System
-blog_introdution_1=Add, modify and delete the classification of a blog.
-blog_introdution_2=Add, modify and delete a blog.
-blog_introdution_3=Add pictures or attachment file in a blog.
-blog_introdution_4=Search a blog by keyword of title.
-blog_introdution_5=Review and comment.
+blog_introdution_1=Add, modify and delete the category and blog.
+blog_introdution_2=Add pictures or attachment file in a blog.
+blog_introdution_3=Search a blog by keyword of title.
+blog_introdution_4=Review and comment.
 easy_finance=Easy Finance
 easy_finance_title=Financial Application for Individual User.
 easy_finance_introduction_1=Manage account book easily.
@@ -46,4 +45,4 @@ httper=Httper
 httper_title=REST API Test App
 httper_introduction_1=Test your REST API without PC.
 httper_introduction_2=Keyboard accessory.
-httper_introduction_3=Developing data synchronization between devices now.
+httper_introduction_3=HTTP request history synchronization between devices.
