--- a/WebContent/static/i18n/index_ja.properties
+++ b/WebContent/static/i18n/index_ja.properties
@@ -15,7 +15,7 @@ index_contact=連絡先
 index_address=<label>筑波大学・コンピュータサイエンス専攻・ソフトウェア研究室</label><label>茨城県・つくば市・天王台 1-1-1</label><label>+81 07010623837</label><label>lm2343635@126.com</label><label>limeng@softlab.cs.tsukuba.ac.jp</label>
 
 organization=筑波大学大学院・システム情報工学研究科・コンピュータサイエンス専攻
-research=分散システムと信頼しないサーバでアプリの構築に注目
+research=複数の信頼できないサーバでアプリの構築に注目
 education=教育経歴
 programming_skill=プログラミングスキル
 le4=利用するだけでなくライブラリ構築等ができる
@@ -25,11 +25,10 @@ le1=授業等で利用したことがある
 web_application=Webアプリケーション
 blog=ブログ記事
 blog_title=個人ホームページ・ブログ記事システム
-blog_introdution_1=記事の分類の追加と変更、削除
-blog_introdution_2=記事の追加と変更、削除
-blog_introdution_3=記事に画像と添付ファイルを追加
-blog_introdution_4=キーワードで記事を検索
-blog_introdution_5=レビューとコメント
+blog_introdution_1=記事と分類の追加と変更、削除
+blog_introdution_2=記事に画像と添付ファイルを追加
+blog_introdution_3=キーワードで記事を検索
+blog_introdution_4=レビューとコメント
 easy_finance=Easy Finance
 easy_finance_title=個人向け財務管理アプリ
 easy_finance_introduction_1=帳簿を簡単に管理
@@ -37,13 +36,13 @@ easy_finance_introduction_2=図で報告の作成
 easy_finance_introduction_3=何でも記録
 easy_finance_introduction_4=賢くお金を使える
 ios_application=iOSアプリケーション
-rate=Rate Assistant
-rate_title=為替レート検索と購読アプリ
-rate_introduction_1=自分の国の通貨と関心する通貨の間の為替レートをモニター
+rate=為替モニター
+rate_title=為替レート検索とモニターアプリ
+rate_introduction_1=基準通貨と外貨の間の為替レートをモニター
 rate_introduction_2=設定した閾値に満たすと、ユーザに為替レートの現在値を通知
 rate_introduction_3=為替レートに関するニュース
 httper=Httper
 httper_title=REST APIのテストアプリ
 httper_introduction_1=パソコンがなくてもREST APIをテスト可能
 httper_introduction_2=キーボードの拡張
-httper_introduction_3=サーバで同期の機能を開発中
+httper_introduction_3=リクエスト歴史の同期
