--- a/WebContent/static/i18n/index_zh_CN.properties
+++ b/WebContent/static/i18n/index_zh_CN.properties
@@ -9,13 +9,13 @@ index_about_content_1=来自湖北荆门，毕业于东北林业大学。
 index_about_content_2=现就读于日本筑波大学，攻读硕士。
 index_about_content_3=专注于Web端和移动端开发，以下有一些我和我的团队的项目.
 index_about_content_4=常用Java，JavaScript和Objective-C等编程语言，使用Hibernate，Spring等框架开发Java Web，写过一些iOS App。
-index_about_content_5=在实现业务逻辑功能之上，更加关注页面交互和设计。
+index_about_content_5=在实现业务逻辑功能之上，更加关注页面交互和用户体验。
 index_motto=IT，改变生活
 index_contact=联系方式
 index_address=<label>筑波大学大学院，计算机科学专攻，Softlab研究室</label><label>日本，茨城县，筑波市，天王台1-1-1</label><label>+81 07010623837</label><label>lm2343635@126.com</label><label>limeng@softlab.cs.tsukuba.ac.jp</label>
 
 organization=筑波大学研究生院，系统信息工程研究科，计算机科学专攻
-research=致力于分布式系和不可信赖服务器上构建应用程序的研究
+research=致力于分布式系统，以及在不可信赖服务器上构建应用程序的研究
 education=教育背景
 programming_skill=编程技能
 le4=非常熟练得使用 
@@ -25,11 +25,10 @@ le1=在授课过程中使用过
 web_application=Web应用程序
 blog=博客
 blog_title=我的个人主页，一个Java语言实现的博客系统
-blog_introdution_1=新增，修改和删除一个博文分类
-blog_introdution_2=新增，修改和删除一篇博文
-blog_introdution_3=向博文中添加图片和附件
-blog_introdution_4=通过标题中的关键字搜索博文
-blog_introdution_5=评论功能
+blog_introdution_1=新增，修改和删除一个博文分类和博文
+blog_introdution_2=向博文中添加图片和附件
+blog_introdution_3=通过标题中的关键字搜索博文
+blog_introdution_4=评论功能
 easy_finance=轻松记
 easy_finance_title=个人财务管理系统
 easy_finance_introduction_1=轻松管理账本
@@ -46,4 +45,4 @@ httper=Httper
 httper_title=REST API测试工具
 httper_introduction_1=没有电脑也能测试REST API
 httper_introduction_2=强大的键盘扩展功能
-httper_introduction_3=数据同步功能正在开发中，敬请期待
+httper_introduction_3=HTTP请求历史同步
