Update page content.

--- a/src/main/webapp/static/i18n/index.properties
+++ b/src/main/webapp/static/i18n/index.properties
@@ -1,18 +1,18 @@
 index_title=Homepage of Meng Li
 index_blogs=Blogs
-index_introduce=Hello,<br/>I'm Meng Li. <br/>A Web/iOS application developer.<br/>Based in Tsukuba, Ibaraki, Japan.<br/>
+index_introduce=Hello,<br/>I'm Meng Li. <br/>A Web/iOS application developer.<br/>Based in Tokyo, Japan.<br/>
 index_contact_me=CONTACT ME
 index_my_blogs=MY BLOGS
 index_my_github=MY GITHUB
 index_about=About Me
-index_about_content_1=Born in Jingmen, Hubei, China. Graduated from Northeast Forestry University in Harbin, China. 
-index_about_content_2=Now I am studying in University of Tsukuba in Tsukuba, Ibaraki, Japan.
+index_about_content_1=Born in Jingmen, Hubei, China. Graduated from University of Tsukuba in Tsukuba, Ibaraki, Japan.
+index_about_content_2=Now I am working in mixi Inc.
 index_about_content_3=I am interested in web application and mobile application development. There are some projects of me by myself and my group in this homepage.
 index_about_content_4=I am familiar with Objective-C and Java language. 
 index_about_content_5=After implementing basic functions, I will concentrate more on design and interaction.
 index_motto=Support life of everyone by information technology.
 index_contact=Ways to Contact Me
-index_address=<label>Softlab, Department of Computer Science, University of Tsukuba</label><label>Tennodai 1-1-1, Tsukuba, Ibaraki, Japan</label><label>+81 07010623837</label><label>lm2343635@126.com</label><label>limeng@softlab.cs.tsukuba.ac.jp</label>
+index_address=<label>1 Chome-2-20 Higashi, Shibuya, Tokyo, Japan</label><label>+81 09098065360</label><label>lm2343635@126.com</label>
 
 organization=Department of Computer Science, Graduate School of System and Information Engineering, University of Tsukuba
 research=Research on distributed system and building application with untrusted servers.
