--- a/src/main/webapp/static/i18n/index_zh_CN.properties
+++ b/src/main/webapp/static/i18n/index_zh_CN.properties
@@ -1,18 +1,18 @@
 index_title=浮尘追梦
 index_blogs=我的博客
-index_introduce=hi，我是浮尘追梦<br/>一名来自中国的Web/iOS开发者<br/>现居日本茨城县筑波市<br/>
+index_introduce=hi，我是浮尘追梦<br/>一名来自中国的Web/iOS开发者<br/>现居日本东京<br/>
 index_contact_me=联系方式
 index_my_blogs=我的博客
 index_my_github=我的GITHUB
 index_about=关于我
-index_about_content_1=来自湖北荆门，毕业于东北林业大学。
-index_about_content_2=现就读于日本筑波大学，攻读硕士。
+index_about_content_1=来自湖北荆门，毕业于日本筑波大学，取得硕士学位。
+index_about_content_2=现就就职于mixi Inc。
 index_about_content_3=专注于Web端和移动端开发，以下有一些我和我的团队的项目.
 index_about_content_4=常用Java，JavaScript和Objective-C等编程语言，使用Hibernate，Spring等框架开发Java Web，写过一些iOS App。
 index_about_content_5=在实现业务逻辑功能之上，更加关注页面交互和用户体验。
 index_motto=IT，改变生活
 index_contact=联系方式
-index_address=<label>筑波大学大学院，计算机科学专攻，Softlab研究室</label><label>日本，茨城县，筑波市，天王台1-1-1</label><label>+81 07010623837</label><label>lm2343635@126.com</label><label>limeng@softlab.cs.tsukuba.ac.jp</label>
+index_address=<label>日本东京都涩谷区东1-2-20</label><label>+81 09098065360</label><label>lm2343635@126.com</label>
 
 organization=筑波大学研究生院，系统信息工程研究科，计算机科学专攻
 research=致力于分布式系统，以及在不可信赖服务器上构建应用程序的研究
