--- a/src/main/webapp/static/i18n/index_ja.properties
+++ b/src/main/webapp/static/i18n/index_ja.properties
@@ -1,18 +1,18 @@
 index_title=Meng Liのホームページ
 index_blogs=ブログ
-index_introduce=こんにちは<br>WebとiOSアプリ開発者のMeng Li<br/>茨城県・つくば市・筑波大学大学院<br/>
+index_introduce=こんにちは<br>WebとiOSアプリ開発者のMeng Li<br/><br/>
 index_contact_me=連絡先
 index_my_blogs=ブログ
 index_my_github=GITHUB
 index_about=私について
-index_about_content_1=中国、湖北省、荊門市生まれ；中国、ハルビン市の東北林業大学から卒業
-index_about_content_2=茨城県つくば市の筑波大学で博士前期課程を勉強中
+index_about_content_1=中国、湖北省、荊門市生まれ；茨城県つくば市の筑波大学で博士前期課程から卒業
+index_about_content_2=mixi Incで就職
 index_about_content_3=iOSアプリケーション開発とWebアプリケーション開発に注目
 index_about_content_4=Objective-CとJava言語を熟練に使える
 index_about_content_5=基本的な機能を実現だけではなく、アプリケーションのデーザン面をもっと注目
 index_motto=IT技術で人々の暮らしを支える
 index_contact=連絡先
-index_address=<label>筑波大学・コンピュータサイエンス専攻・ソフトウェア研究室</label><label>茨城県・つくば市・天王台 1-1-1</label><label>+81 07010623837</label><label>lm2343635@126.com</label><label>limeng@softlab.cs.tsukuba.ac.jp</label>
+index_address=<label>東京都渋谷区東１丁目２−20</label><label>+81 09098065360</label><label>lm2343635@126.com</label>
 
 organization=筑波大学大学院・システム情報工学研究科・コンピュータサイエンス専攻
 research=複数の信頼できないサーバでアプリの構築に注目
